--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ header{
 .header-top{display:flex;align-items:center;gap:12px}
 .header-top img{height:46px}
 
-section{padding:40px 16px;max-width:1000px;margin:auto}
+section{padding:40px 16px;max-width:1100px;margin:auto}
 h1{font-size:42px;margin:16px 0}
 h2{text-align:center;margin-bottom:24px}
 
@@ -116,6 +116,18 @@ input,select{
 }
 .actions button{flex:1}
 
+.gallery{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:14px
+}
+.gallery img{
+  width:100%;
+  height:160px;
+  object-fit:cover;
+  border-radius:12px
+}
+
 footer{
   text-align:center;
   color:#aaa;
@@ -135,6 +147,18 @@ footer{
   <p>Lengkap • Praktis • Siap Untuk Momen Spesial</p>
 </header>
 
+<!-- GALERI FOTO -->
+<section>
+<h2>Galeri BBQ</h2>
+<div class="gallery">
+  <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
+  <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd">
+  <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092">
+  <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe">
+</div>
+</section>
+
+<!-- DASHBOARD PAKET -->
 <section>
 <h2>Paket Grill</h2>
 
@@ -182,6 +206,7 @@ footer{
 </div>
 </section>
 
+<!-- BOOKING -->
 <section id="booking">
 <h2>Booking Sekarang</h2>
 
@@ -238,6 +263,7 @@ function rupiah(n){
 
 function setPaket(val){
   document.getElementById("paket").value = val;
+  document.getElementById("booking").scrollIntoView({behavior:"smooth"});
 }
 
 function hitung(){
@@ -246,15 +272,15 @@ function hitung(){
   var berat = Number(document.getElementById("beratDaging").value||0);
 
   var condiments = document.getElementsByClassName("condiment");
-  var detailCondiment = "";
   var qty = 0;
+  var detail = "";
 
   for(var i=0;i<condiments.length;i++){
     var q = Number(condiments[i].value||0);
     qty += q;
     if(q>0){
       var nama = condiments[i].parentNode.firstChild.textContent.trim();
-      detailCondiment += "- "+nama+" : "+q+" pcs\n";
+      detail += "- "+nama+" : "+q+" pcs\n";
     }
   }
 
@@ -277,7 +303,7 @@ function hitung(){
   window.waDetail =
     "Paket : "+paket+"\n"+
     (berat>0 ? "Daging : "+berat+" gram\n":"")+
-    (detailCondiment!=="" ? "Condiment:\n"+detailCondiment:"");
+    (detail!=="" ? "Condiment:\n"+detail:"");
 }
 
 setInterval(hitung,300);
