Update prices and button onclick handlers in index.html

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ footer{text-align:center;color:#aaa;padding:20px}
       <li>Chicken 250gr</li>
       <li>Saus BBQ + Sayur</li>
     </ul>
-    <div class="price">Rp 119.000</div>
-    <button class="btn" onclick="setPaket(119000)">Pilih Paket</button>
+    <div class="price">Rp 125.000</div>
+    <button class="btn" onclick="setPaket(1250001">Pilih Paket</button>
   </div>
 
   <div class="card">
@@ -193,8 +193,8 @@ footer{text-align:center;color:#aaa;padding:20px}
       <li>Chicken 500gr</li>
       <li>Grill Set Lengkap</li>
     </ul>
-    <div class="price">Rp 200.000</div>
-    <button class="btn" onclick="setPaket(200000)">Pilih Paket</button>
+    <div class="price">Rp 220.000</div>
+    <button class="btn" onclick="setPaket(200000)"(220000)">P</button>
   </div>
 
   <div class="card">
