--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ footer{text-align:center;color:#aaa;padding:20px}
       <li>Grill Set Lengkap</li>
     </ul>
     <div class="price">Rp 220.000</div>
-    <button class="btn" onclick="setPaket(220000">Pilih Paket</button>
+    <button class="btn" onclick="setPaket(2200001">Pilih Paket</button>
   </div>
 
   <div class="card">
